2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Do not add a COPY command if the dump is
	  already on the storage
	* server-src/driverio.c (startup_vault_tape_process): Use same taper
	  as storage

2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/cmdfile.c (cmdfile_get_nb_image_cmd_for_storage): New
	  function
	* server-src/cmdfile.h (cmdfile_get_nb_image_cmd_for_storage): Add
	  prototype
	* server-src/find.c (make_dump_storage_hash, add_dump_storage_hash,
	  dump_storage_hash_exist): New functions to keep track of all
	  available dump
	* server-src/find.h (make_dump_storage_hash, add_dump_storage_hash,
	  dump_storage_hash_exist): Add prototypes

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send CLOSE-VOLUME command only if the volume
	  is opened

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix queue handling

2018-01-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: s/xlog/wal/ in function name for version
	  10 and newer

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-taper-vault.pl: Merge error

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (server-src/driver.c): Remove function

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Improvement

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (idle_taper): Check wtaper->vaultqs.vaultq.head

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set sent_first_write and last_started_wtaper

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Improve new_tape

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set TAPER_STATE_TAPE_STARTED on NEW-TAPE
